--- a/leaflet/earthquake/earthquake.css
+++ b/leaflet/earthquake/earthquake.css
@@ -3,8 +3,33 @@ body {
   margin: 0;
 }
 
-html,body,
+html,
+body,
 #quakemap {
   height: 100%;
   width: 100%;
+}
+
+.legend {
+  background: white;
+  padding: 10px;
+  font-size: 14px;
+  line-height: 18px;
+  color: #555;
+}
+.legend div {
+  margin-bottom: 5px;
+}
+.legend {
+  background: lightgrey;
+  font-size: 14px;
+  line-height: 14px;
+  color: black;
+}
+
+.legend span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
